# QuAPI

./: .gitignore  CMakeLists.txt  README.md  manifest.scm  redirect.sh
cmake/: FindPCRE2.cmake
common/: CMakeLists.txt
common/include/quapi/: definitions.h  message.h  zero-copy-pipes-linux.h
common/src/: common.c  zero-copy-pipes-linux.c
lib/: CMakeLists.txt
lib/include/quapi/: quapi.h
lib/src/: quapi.c
preload/: CMakeLists.txt
preload/include/quapi/: runtime.h  timing.h
preload/src/: inject_main.c  inject_read.c  runtime.c  timing.c
quapify/: CMakeLists.txt
quapify/src/: common.c  common.h  file.c  parse.c  parse.h  quapify.c  utilities.c  utilities.h
scripts/: plot-data.gnuplot  slurmified_quapi_datatosqlite.pl  slurmified_quapi_maptodata.pl  slurmified_quapify.pl
test/: CMakeLists.txt  test_abort.cpp  test_bash_as_solver.cpp  test_cadical.cpp  test_caqe.cpp  test_init_and_release.cpp  test_main.cpp  test_signature.cpp  test_stdout_cb.cpp  test_supplied_solver.cpp  util.cpp  util.hpp
